wip: try to fix vh on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,12 +47,18 @@ html {
   margin-right: calc(-1 * (100vw - 100%));
 }
 
-body,
 #__next,
 .garage,
 .v-global-wrapper {
-  height: 100%;
+  min-height: 100vh;
 }
+
+/* body, */
+/* #__next,
+.garage,
+.v-global-wrapper {
+  min-height: 100vh;
+} */
 
 @layer utilities {
   .v-items-start {
@@ -115,9 +121,9 @@ body,
   /* subtract header spacing instead of header */
   /* subtract nav height too */
   .v-h-remaining-screen {
-    height: 80vh;
+    /* height: 80vh; */
     height: calc(
-      100vh - (theme("spacing.2") - theme("spacing.10")) - theme("spacing.24") -
+      100% - (theme("spacing.2") - theme("spacing.10")) - theme("spacing.24") -
         theme("spacing.4") - theme("spacing.6")
     );
   }
